--- a/templates/contact/contact.html.twig
+++ b/templates/contact/contact.html.twig
@@ -12,12 +12,12 @@
     <div class="row col-md-12 justify-content-center gen">
     <div class="col-md-8 gen">
     
-<h1 style="text-align: center"> Nous contacter en cas de besoin </h1>
+<h1 style="text-align: center"> <p class="textf">Nous contacter en cas de besoin <p></h1>
 
 
     <div class="container">
 
-        <p>Pour toute question ou suggestion concernant nos produits, n'hésitez pas à nous écrire via le formulaire de contact ci-dessous. Si vous souhaitez voir vos produits figurer dans notre boutique en ligne, n'hésitez pas à nous écrire. Nous répondons avec plaisir à toutes vos questions !<p>
+        <p class="textf">Pour toute question ou suggestion concernant nos produits, n'hésitez pas à nous écrire via le formulaire de contact ci-dessous. Si vous souhaitez voir vos produits figurer dans notre boutique en ligne, n'hésitez pas à nous écrire. Nous répondons avec plaisir à toutes vos questions !<p>
 
 {{ form_start(form) }}
             <div class="form-group">
