--- a/templates/entretien/edit.html.twig
+++ b/templates/entretien/edit.html.twig
@@ -15,7 +15,7 @@
 <div class="container-fluid">
     <div class="row col-md-12 justify-content-center gen">
     <div class="col-md-8 gen">
-    <h1>Modifier Equipements</h1>
+    <h1><p class="textf">Modifier Equipements<p></h1>
 
     {{ include('entretien/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
