--- a/templates/entretien/new.html.twig
+++ b/templates/entretien/new.html.twig
@@ -15,11 +15,11 @@
 <div class="container-fluid">
     <div class="row col-md-12 justify-content-center gen">
     <div class="col-md-8 gen">
-    <h1>Créer un article</h1>
+    <h1><p class="textf">Créer un article<p></h1>
 
     {{ include('entretien/_form.html.twig') }}
 
-    <a href="{{ path('entretien_index') }}">revenir à la liste</a>
+    <a href="{{ path('entretien_index') }}"><p class="textf">revenir à la liste<p></a>
     </div>   
     </div>   
     </div> 
