--- a/templates/papeterie/edit.html.twig
+++ b/templates/papeterie/edit.html.twig
@@ -13,7 +13,7 @@
     <div class="col-md-8 gen">
     <br>
 
-    <h1>Modifier Papeterie</h1>
+    <h1><p class="textf">Modifier Papeterie<p></h1>
 
     {{ include('papeterie/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
