--- a/templates/produit/new.html.twig
+++ b/templates/produit/new.html.twig
@@ -14,7 +14,7 @@
 <div class="container-fluid">
     <div class="row col-md-12 justify-content-center gen">
     <div class="col-md-8 gen">
-    <h1>Nouveau Article</h1>
+    <h1><p class="textf">Nouveau Article<p></h1>
 
     {{ include('produit/_form.html.twig') }}
 
