--- a/templates/papeterie/index.html.twig
+++ b/templates/papeterie/index.html.twig
@@ -14,7 +14,7 @@
 <div class="container-fluid ">
     <div class="row col-md-12 justify-content-center gen">
     <div class="col-md-8 gen">
-   <br> <h1>Papeterie</h1>
+   <br> <h1><p class="textf">Papeterie<p></h1>
 
 
     <table class="table">
