--- a/templates/papeterie/new.html.twig
+++ b/templates/papeterie/new.html.twig
@@ -12,7 +12,7 @@
     <div class="row col-md-12 justify-content-center gen">
     <div class="col-md-8 gen">
     <br>
-<h1>Créer un nouveau article</h1>
+<h1><p class="textf">Créer un nouveau article<p></h1>
     {{ include('papeterie/_form.html.twig') }}
 
     <a href="{{ path('papeterie_index') }}">revenir à la liste</a>
