--- a/templates/papeterie/show.html.twig
+++ b/templates/papeterie/show.html.twig
@@ -12,7 +12,7 @@
     <div class="row col-md-12 justify-content-center gen">
     <div class="col-md-8 gen">
     <br>
-    <h1>Papeterie</h1>
+    <h1><p class="textf">Papeterie<P></h1>
 
     <table class="table">
         <tbody>
