--- a/templates/produit/show.html.twig
+++ b/templates/produit/show.html.twig
@@ -53,9 +53,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('produit_index') }}">revenir à la liste</a>
+    <a href="{{ path('produit_index') }}"><p class="textf">revenir à la liste<p></a>
 
-    <a href="{{ path('produit_edit', {'id': produit.id}) }}">modifier</a>
+    <a href="{{ path('produit_edit', {'id': produit.id}) }}"><p class="textf">modifier<p></a>
 
     {{ include('produit/_delete_form.html.twig') }}
     </div>   
