--- a/templates/entretien/index.html.twig
+++ b/templates/entretien/index.html.twig
@@ -16,7 +16,7 @@
 <div class="container-fluid">
     <div class="row col-md-12 justify-content-center gen">
     <div class="col-md-8 gen">
-    <h1><p class="textf">Equipements<p></h1>
+    <h1>Equipements</h1>
 
     <table class="table">
         <thead>
@@ -46,17 +46,21 @@
                 <td>
                     <a href="{{ path('entretien_show', {'id': entretien.id}) }}">Voir</a>
                     <a href="{{ path('entretien_edit', {'id': entretien.id}) }}">Modifier</a>
+                     <a href="{{path('cart_add', {'id': entretien.id })}}" class="btn btn-success float-right">
+                        <i class="fa fa-shopping-cart"></i>
+                        Ajouter
+                    </a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="9"><p class="textf">Pas d'articles pour le moment<P></td>
+                <td colspan="9">Pas d'articles pour le moment</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('entretien_new') }}"><p class="textf">Créer un nouveau article<p></a>
+    <a href="{{ path('entretien_new') }}">Créer un nouveau article</a>
    
     </div>   
     </div>   
