--- a/templates/papeterie/index.html.twig
+++ b/templates/papeterie/index.html.twig
@@ -47,6 +47,8 @@
                 <td>
                     <a href="{{ path('papeterie_show', {'id': papeterie.id}) }}">Voir</a>
                     <a href="{{ path('papeterie_edit', {'id': papeterie.id}) }}">Modifier</a>
+                     <a href="{{path('cart_remove', {'id': papeterie.id })}}" class="btn btn-danger btn-sm">
+                        <i class="fas fa-trash"></i>
                 </td>
             </tr>
         {% else %}
