--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -45,6 +45,8 @@
                 <td>
                     <a href="{{ path('produit_show', {'id': produit.id}) }}">Voir</a>
                     <a href="{{ path('produit_edit', {'id': produit.id}) }}">Modifier</a>
+                     <a href="{{path('cart_remove', {'id': produit.id })}}" class="btn btn-danger btn-sm">
+                        <i class="fas fa-trash"></i>
                 </td>
             </tr>
         {% else %}
