--- a/templates/commande/index.html.twig
+++ b/templates/commande/index.html.twig
@@ -24,9 +24,9 @@
                 <td>
                     <a href="{{ path('commande_show', {'id': item.product.id}) }}"class="btn btn-success btn-sm">>show</a>
                     <a href="{{ path('commande_edit', {'id': item.product.id}) }}"class="btn btn-info btn-sm">>edit</a>
-                    <a href="{{path('cart_remove', {'id': item.product.id })}}" class="btn btn-danger btn-sm">
-                        <i class="fas fa-trash"></i>
-                        Delete
+                   <a href="{{path('cart_add', {'id': item.product.id })}}" class="btn btn-success float-right">
+                        <i class="fa fa-shopping-cart"></i>
+                        Ajouter
                     </a>
                 </td>
             </tr>
