--- a/templates/commande/index.html.twig
+++ b/templates/commande/index.html.twig
@@ -8,38 +8,39 @@
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>Numcom</th>
                 <th>Produit</th>
-                <th>Date</th>
-                <th>Tht</th>
-                <th>Ttva</th>
-                <th>Tttc</th>
-                <th>actions</th>
+                <th>Prix</th>
+                <th>Quantité</th>
+                <th>Total</th>
+                <th></th> 
             </tr>
         </thead>
         <tbody>
-        {% for commande in commandes %}
+        {% for item in item %}
             <tr>
-                <td>{{ commande.id }}</td>
-                <td>{{ commande.numcom }}</td>
-                <td>{{ commande.produit }}</td>
-                <td>{{ commande.date ? commande.date|date('Y-m-d') : '' }}</td>
-                <td>{{ commande.tht }}</td>
-                <td>{{ commande.ttva }}</td>
-                <td>{{ commande.tttc }}</td>
+                <td>{{ item.product.title }}</td>
+                <td>{{ item.product.price }}</td>
+                <td>{{ item.quantity }}</td>
+                <td>{{ item.product.price * item.quantity}}</td>
                 <td>
-                    <a href="{{ path('commande_show', {'id': commande.id}) }}">show</a>
-                    <a href="{{ path('commande_edit', {'id': commande.id}) }}">edit</a>
+                    <a href="{{ path('commande_remove', {'id': item.product.id}) }}" class="btn btn-danger btn-sm">
+                    <i class="fas fa-trash"><i/>
+                    </a>   
                 </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="7">no records found</td>
             </tr>
         {% endfor %}
         </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="7">Total : 
+                </td>
+                <td>{{ total }}</td>
+                <td></td>
+            </tr>
+        </tfoot>  
     </table>
-
-    <a href="{{ path('commande_new') }}">Create new</a>
+    {% else %}
+        <p></p>
+    {% endif %}    
+    
 {% endblock %}
