--- a/templates/papeterie/index.html.twig
+++ b/templates/papeterie/index.html.twig
@@ -57,7 +57,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('papeterie_new') }}">Créer un nouveau article</a>
+    <a href="{{ path('papeterie_new') }}"><p class="textf">Créer un nouveau article<p></a>
      </div>
     </div>
 </div>
