--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -1,6 +1,6 @@
-{% extends 'base.html.twig' %}
 
-{% block title %}User{% endblock %}
+
+{% block title %}{% endblock %}
 
 {% block body %}
     <h1>User</h1>
@@ -86,4 +86,7 @@
     
     
     {{ include('user/_delete_form.html.twig') }}
+    </div>
+    </div>
+</div>
 {% endblock %}
