--- a/templates/login/new.html.twig
+++ b/templates/login/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New User{% endblock %}
+{% block title %}New Login{% endblock %}
 
 {% block body %}
 <div class="container-fluid">
@@ -11,15 +11,19 @@
 
 <div class="container-fluid ">
     <div class="row col-md-12 justify-content-center gen">
-    <div class="col-md-8 gen">
-    <h1 class="text-center">Inscription Compte Client</h1>
+    <div class="col-md-3 gen">
+    <h1>Connectez vous</h1>
 
-    {{ include('user/_form.html.twig') }}
-
-  
-
-<a href="{{ path('login_new') }}">Revenir</a> 
-</div>
+    {{ include('login/_form.html.twig') }}
+   
+    
+    <a href="{{ path('user_new') }}">Demande d'inscription</a>
+   </div>
     </div>
 </div>
+
+    
+
+    
 {% endblock %}
+
