--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,27 +1,24 @@
 {{ form_start(form) }}
-    <div class="row">
-        <div class="form-group col-6 col-ms-6 col-md-6 col-lg-6 col-xl-6 mx-auto">
+    <div class="row ">
+        <div class="form-group col-6 col-ms-4 col-md-4 col-lg-4 col-xl-4 mx-auto">
             <div class="form-group">
                 {{ form_row(form.entreprise, {'label': 'Entreprise', 'attr':{'placeholder' : 'Nommer votre Entreprise ...', 'class':'form-control'}}) }}
             </div>
             <div class="form-group">
                 {{ form_row(form.responsable, {'label': 'Responsable', 'attr':{'placeholder' : 'Nommer votre Responsable ...', 'class':'form-control'}}) }}
             </div>
-            
             <div class="form-group">
                 {{ form_row(form.email, {'label': 'Email', 'attr':{'placeholder' : 'Nommer votre email ...', 'class':'form-control' }}) }}
             </div>
             <div class="form-group">
                 {{ form_row(form.telephone, {'label': 'Telephone', 'attr':{'placeholder' : 'Nommer votre telephone ...', 'class':'form-control' }}) }}
             </div>
-        
             <div class="form-group">
                 {{ form_row(form.mdp, {'label': 'Mot de passe', 'attr':{'placeholder' : 'Mdp ...', 'class':'form-control', 'type':'password' }}) }}
             </div>
             <div class="form-group">
                 {{ form_row(form.confirm_mdp, {'label': 'Confirmer le mot de passe', 'attr':{'placeholder' : 'Confirmer Mdp ...' , 'class':'form-control', 'type':'password' }}) }}
             </div>
-        
             <div class="form-group">
                 {{ form_row(form.adresseL, {'label': 'Adresse de Livraison', 'attr':{'placeholder' : 'Livraison ...', 'class':'form-control' }}) }}
             </div>
@@ -50,21 +47,12 @@
             <div class="form-group">
                 {{ form_row(form.NKBIS, {'label': 'N°KBIS', 'attr':{'placeholder' : 'N°KBIS ...', 'class':'form-control' }}) }}
             </div>
-            
-            <button class="btn btn-success">{{ button_label|default('Sauvegarder') }}</button>
+            <div class="form-group">
+                <button type="submit" class="btn btn-success">sauvegarde</button>
+            </div>
         </div>
-        <div class="form-group col-6 col-ms-6 col-md-6 col-lg-6 col-xl-6 mx-auto">
-            <form action="{{ path('security_login') }}" method="post">
-                <div class="form-group">
-                    {{ form_row(form.email, {'label': 'Email', 'attr':{'placeholder' : 'Adresse email ...', 'class':'form-control' }}) }}
-                </div>
-                <div class="form-group">
-                    {{ form_row(form.mdp, {'label': 'mdp', 'attr':{'placeholder' : 'Mot de passe ...', 'class':'form-control', 'type':'password' }}) }}
-                </div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-success">Connexion !</button>
-                </div>
-            </form>
-        </div>
-    </div>
+   </div> 
+
+
+   
 {{ form_end(form) }}
