--- a/public/css/styleheader.css
+++ b/public/css/styleheader.css
@@ -5,7 +5,7 @@
     /* Mise en forme */
     width: 100%; /* <-- Largeur de votre site */
     }
-.nav-pers{margin-left: 80px}
+/*.nav-pers{margin-left: 80px}*/
 
 a.bouton_banniere {
     background-image: url(../img/icon-user-a.png);
@@ -99,8 +99,7 @@ font-family: Apple Chancery, cursive;
 }
 .taille
 {
-    font-size: 1.3em;
-    justify-content: end;
+     justify-content: end;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     
 }
@@ -109,3 +108,7 @@ font-family: Apple Chancery, cursive;
     
 }
 
+#btn5,#btn4,#btn3,#btn2,#btn1
+{
+font-size: 1.1em;
+}
