--- a/templates/login/_form.html.twig
+++ b/templates/login/_form.html.twig
@@ -4,7 +4,7 @@
         {{ form_row(form.email, {'label': 'Email', 'attr':{'placeholder' : 'Adresse email ...', 'class':'form-control' }}) }}
     </div>
     <div class="form-group">
-        {{ form_row(form.password, {'label': 'mdp', 'attr':{'placeholder' : 'Mot de passe ...', 'class':'form-control', 'type':'password' }}) }}
+        {{ form_row(form.password, {'label': 'Mot de passe', 'attr':{'placeholder' : 'Mot de passe ...', 'class':'form-control', 'type':'password' }}) }}
     </div>
     <div class="form-group">
         <button type="submit" class="btn btn-success">Connexion !</button>
