--- a/templates/contact/contact.html.twig
+++ b/templates/contact/contact.html.twig
@@ -6,12 +6,12 @@
        <div class="col-md-12 cont row justify-content-center"><div class="col-md-3 title"></div>
     </div>
 </div>
-
+<br>
 <section>
 <div class="container-fluid">
     <div class="row col-md-12 justify-content-center gen">
-    <div class="col-md-8 gen">
-    
+    <div class="col-md-8 gen cadro ">
+    <br>
 <h1 style="text-align: center"> <p class="textf">Nous contacter en cas de besoin <p></h1>
 
 
@@ -41,4 +41,5 @@
     </div>   
     </div>   
     </div> 
+    <br>
 {% endblock %}
