--- a/templates/entretien/edit.html.twig
+++ b/templates/entretien/edit.html.twig
@@ -10,18 +10,19 @@
        </div>
     </div>
 </div>
-
+<br>
 <section>
 <div class="container-fluid">
     <div class="row col-md-12 justify-content-center gen">
-    <div class="col-md-8 gen">
+    <div class="col-md-4 gen cadru">
     <h1><p class="textf">Modifier Equipements<p></h1>
 
     {{ include('entretien/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
-    <a href="{{ path('entretien_index') }}">revenir à la liste</a>
+    <a href="{{ path('entretien_index') }}"><p class="textf">revenir à la liste<p></a>
 
     {{ include('entretien/_delete_form.html.twig') }}
+    <br>
     </div>   
     </div>   
     </div> 
