--- a/templates/entretien/index.html.twig
+++ b/templates/entretien/index.html.twig
@@ -11,11 +11,11 @@
     </div>
 </div>
 
-
+<br>
 <section>
 <div class="container-fluid">
-    <div class="row col-md-12 justify-content-center gen">
-    <div class="col-md-8 gen">
+     <div class="row col-md-12 justify-content-center gen">
+    <div class="col-md-10 gen cadri">
     <h1><p class="textf">Equipements<p></h1>
 
     <table class="table">
@@ -61,5 +61,6 @@
     </div>   
     </div>   
     </div> 
+    <br>
      {% endblock %}
 
