--- a/templates/entretien/show.html.twig
+++ b/templates/entretien/show.html.twig
@@ -10,12 +10,12 @@
        </div>
     </div>
 </div>
-
+<br>
 <section>
 <div class="container-fluid">
     <div class="row col-md-12 justify-content-center gen">
-    <div class="col-md-8 gen">
-    <h1>Equipements</h1>
+    <div class="col-md-6 gen cadru">
+    <h1><p class="textf">Equipements<p></h1>
 
     <table class="table">
         <tbody>
@@ -59,6 +59,7 @@
     <a href="{{ path('entretien_edit', {'id': entretien.id}) }}"><p class="textf">Modifier<p></a>
 
     {{ include('entretien/_delete_form.html.twig') }}
+    <br>
     </div>   
     </div>   
     </div> 
