--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -9,11 +9,11 @@
        <div class="col-md-12 herd row justify-content-center"><div class="col-md-3 title"></div>
     </div>
 </div>
-
+<br>
 <section>
 <div class="container-fluid">
     <div class="row col-md-12 justify-content-center gen">
-    <div class="col-md-7 gen">
+    <div class="col-md-8 gen cadro ind">
     
     
 <p class="textf"><br><h1>Green Force</h1><P><p class="textf"> 
@@ -28,5 +28,6 @@ Notre société écologique <strong class="carcv"> Green Force </strong> répert
 </div>   
     </div>   
     </div>
+    <br>
 {% endblock %}
 
