--- a/templates/homepage/propos.html.twig
+++ b/templates/homepage/propos.html.twig
@@ -5,12 +5,12 @@
        <div class="col-md-12 prop row justify-content-center"><div class="col-md-3 title"></div>
     </div>
 </div>
-
+<br>
 <section>
 <div class="container-fluid">
     <div class="row col-md-12 justify-content-center gen">
-    <div class="col-md-8 gen">
-    <br> <h1>A propos</h1>
+    <div class="col-md-8 gen cadro">
+    <br> <h1><p class="textf">A propos<p></h1>
     <p class="textf"> <img src="{{asset ('img/logo.png')}}" alt=""> 
    
    A propos de notre société :
@@ -29,4 +29,5 @@ La conscience écologique de Green_ Force a encore du chemin à parcourir, mais 
 </div>
 
 </section>
+<br>
 {% endblock %}
