--- a/templates/login/new.html.twig
+++ b/templates/login/new.html.twig
@@ -8,16 +8,16 @@
        <div class="col-md-12 papt row justify-content-center"><div class="col-md-3 title"></div>
     </div>
 </div>
-
+<br>
 <div class="container-fluid ">
     <div class="row col-md-12 justify-content-center gen">
-    <div class="col-md-3 gen">
-    <h1>Connectez vous</h1>
+    <div class="col-md-3 gen cadre">
+    <h1><p class="textf">Connectez vous<p></h1>
 
     {{ include('login/_form.html.twig') }}
    
     
-    <a href="{{ path('user_new') }}">Demande d'inscription</a>
+    <a href="{{ path('user_new') }}"><p class="textf">Demande d'inscription<p></a>
    </div>
     </div>
 </div>
