--- a/templates/papeterie/index.html.twig
+++ b/templates/papeterie/index.html.twig
@@ -9,11 +9,11 @@
        <div class="col-md-12 papt row justify-content-center"><div class="col-md-3 title"></div>
     </div>
 </div>
-
+<br>
 <section>
 <div class="container-fluid ">
     <div class="row col-md-12 justify-content-center gen">
-    <div class="col-md-8 gen">
+    <div class="col-md-10 gen cadri">
    <br> <h1><p class="textf">Papeterie<p></h1>
 
 
@@ -61,6 +61,7 @@
      </div>
     </div>
 </div>
+<br>
 {% endblock %}
 
 
