--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -9,11 +9,11 @@
  </div>
     </div>
 </div>
-
+<br>
 <section>
 <div class="container-fluid">
     <div class="row col-md-12 justify-content-center gen">
-    <div class="col-md-8 gen">
+    <div class="col-md-10 gen cadri">
     <h1><p class="textf">Produits d'entretien<p></h1>
 
     <table class="table">
@@ -55,8 +55,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('produit_new') }}">Créer un nouveau article</a>
+    <a href="{{ path('produit_new') }}"><p class="textf">Créer un nouveau article<p></a>
     </div>   
     </div>   
     </div> 
+    <br>
 {% endblock %}
