--- a/templates/avis/_delete_form.html.twig
+++ b/templates/avis/_delete_form.html.twig
@@ -1,5 +1,5 @@
 <form method="post" action="{{ path('avis_delete', {'id': avi.id}) }}" onsubmit="return confirm('Etes-vous sûre de vouloir supprimer ce commentaire?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ avi.id) }}">
-    <button class="btn">Supprimer</button>
+    <button class="ass">Supprimer</button>
 </form>
