--- a/templates/avis/index.html.twig
+++ b/templates/avis/index.html.twig
@@ -8,11 +8,11 @@
        <div class="col-md-12 avv row justify-content-center"><div class="col-md-3 title"></div>
     </div>
 </div>
-    
+    <br>
     <div class="container-fluid">
     <div class="row col-md-12 justify-content-center gen">
-    <div class="col-md-8 gen">
-   <br> <h1>Avis</h1> 
+    <div class="col-md-8 gen cadri">
+   <br> <h1><p class="textf">Avis<pa></h1> 
     <table class="table">
         <thead>
             <tr>
@@ -37,12 +37,12 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="5">Pas d'avis pour le moment</td>
+                <td colspan="5"><p class="textf">Pas d'avis pour le moment<p></td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-    <a href="{{ path('avis_new') }}">Créer un nouveau</a>
+    <a href="{{ path('avis_new') }}"><p class="textf">Créer un nouveau<p></a>
  </div>
     </div>
 </div>
