--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -8,11 +8,11 @@
        <div class="col-md-12 cont row justify-content-center"><div class="col-md-3 title"></div>
     </div>
 </div>
-
+<br>
 <section>
 <div class="container-fluid">
     <div class="row col-md-12 justify-content-center gen">
-    <div class="col-md-8 gen">
+    <div class="col-md-8 gen cadro">
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
@@ -31,4 +31,5 @@
     </div>   
     </div>   
     </div> 
+    <br>
 {% endblock %}
