--- a/templates/papeterie/edit.html.twig
+++ b/templates/papeterie/edit.html.twig
@@ -8,19 +8,22 @@
        <div class="col-md-12 papt row justify-content-center"><div class="col-md-3 title"></div>
     </div>
 </div>
+<br>
 <div class="container-fluid">
     <div class="row col-md-12 justify-content-center gen">
-    <div class="col-md-8 gen">
+    <div class="col-md-4 gen cadru">
     <br>
 
     <h1><p class="textf">Modifier Papeterie<p></h1>
 
     {{ include('papeterie/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
-    <a href="{{ path('papeterie_index') }}">revenir à la liste</a>
+    <a href="{{ path('papeterie_index') }}"><p class="textf">revenir à la liste<p></a>
 
     {{ include('papeterie/_delete_form.html.twig') }}
+    <br>
      </div>
     </div>
 </div>
+<br>
 {% endblock %}
