--- a/templates/papeterie/new.html.twig
+++ b/templates/papeterie/new.html.twig
@@ -1,22 +1,25 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Créer un nouveau article{% endblock %}
+
 
 {% block body %}
+
     <div class="container-fluid">
    <div class="row justify-content-md-center">
        <div class="col-md-12 papt row justify-content-center"><div class="col-md-3 title"></div>
     </div>
 </div>
+<br>
     <div class="container-fluid">
     <div class="row col-md-12 justify-content-center gen">
-    <div class="col-md-8 gen">
+    <div class="col-md-4 gen cadru">
     <br>
 <h1><p class="textf">Créer un nouveau article<p></h1>
     {{ include('papeterie/_form.html.twig') }}
 
-    <a href="{{ path('papeterie_index') }}">revenir à la liste</a>
+    <a href="{{ path('papeterie_index') }}"><p class="textf">revenir à la liste<p></a>
      </div>
     </div>
 </div>
+<br>
 {% endblock %}
