--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New User{% endblock %}
+{% block title %}{% endblock %}
 
 {% block body %}
 <div class="container-fluid">
@@ -8,17 +8,17 @@
        <div class="col-md-12 papt row justify-content-center"><div class="col-md-3 title"></div>
     </div>
 </div>
-
+<br>
 <div class="container-fluid ">
     <div class="row col-md-12 justify-content-center gen">
-    <div class="col-md-8 gen">
-    <h1 class="text-center">Inscription Compte Client</h1>
+    <div class="col-md-4 gen cadre">
+    <h1 class="text-center"><p class="textf">Inscription Compte Client</p></h1>
 
     {{ include('user/_form.html.twig') }}
 
   
 
-<a href="{{ path('login_new') }}">Revenir</a> 
+<a href="{{ path('login_new') }}"><p class="textf">Revenir</p></a> 
 </div>
     </div>
 </div>
