--- a/public/css/styleheader.css
+++ b/public/css/styleheader.css
@@ -88,6 +88,18 @@ a.bouton_banniere1:hover {
     background-image: url(../img/avis.jpg);
     background-size: cover;
 }
+.con
+{
+    height: 40vh;
+    background-image: url(../img/connexion-insciption.jpg);
+    background-size: cover;
+}
+.ins
+{
+    height: 40vh;
+    background-image: url(../img/connexion-insciption.jpg);
+    background-size: cover;
+}
 .title
 {color:white;
 text-shadow:1px 3px 5px #4fa626;
