--- a/templates/login/new.html.twig
+++ b/templates/login/new.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="container-fluid">
    <div class="row justify-content-md-center">
-       <div class="col-md-12 papt row justify-content-center"><div class="col-md-3 title"></div>
+       <div class="col-md-12 con row justify-content-center"><div class="col-md-3 title"></div>
     </div>
 </div>
 
