--- a/public/css/styleheader.css
+++ b/public/css/styleheader.css
@@ -88,6 +88,13 @@ a.bouton_banniere1:hover {
     background-image: url(../img/avis.jpg);
     background-size: cover;
 }
+.conn
+{
+    
+    height: 40vh;
+    background-image: url(../img/connexion-inscription.jpg);
+    background-size: cover;
+}
 .title
 {color:white;
 text-shadow:1px 3px 5px #4fa626;
