--- a/templates/login/show.html.twig
+++ b/templates/login/show.html.twig
@@ -17,7 +17,7 @@
             </tr>
             <tr>
                 <th>Password</th>
-                <td>{{ login.password }}</td>
+                <td>{{ login.mdp }}</td>
             </tr>
         </tbody>
     </table>
