--- a/templates/login/_form.html.twig
+++ b/templates/login/_form.html.twig
@@ -1,10 +1,10 @@
 {{ form_start(form) }}
     <div>             
     <div class="form-group">
-        {{ form_row(form.email, {'label': 'Email', 'attr':{'placeholder' : 'Adresse email ...', 'class':'form-control' }}) }}
+        {{ form_row(form.email, {'label': 'Email', 'attr':{'placeholder' : 'Adresse email ...', 'required name':'_username', 'class':'form-control' }}) }}
     </div>
     <div class="form-group">
-        {{ form_row(form.password, {'label': 'Mot de passe', 'attr':{'placeholder' : 'Mot de passe ...', 'class':'form-control', 'type':'password' }}) }}
+        {{ form_row(form.mdp, {'label': 'Mot de passe', 'attr':{'placeholder' : 'Mot de passe ...', 'class':'form-control', 'required name':'_password', 'type':'password' }}) }}
     </div>
     <div class="form-group">
         <button type="submit" class="btn btn-success">Connexion !</button>
