--- a/templates/login/new.html.twig
+++ b/templates/login/new.html.twig
@@ -4,12 +4,12 @@
 
 {% block body %}
 <div class="container-fluid">
-   <div class="row justify-content-md-center">
-       <div class="col-md-12 papt row justify-content-center"><div class="col-md-3 title"></div>
+    <div class="row justify-content-md-center">
+       <div class="col-md-12 conn row justify-content-center"><div class="col-md-3 title"></div>
     </div>
 </div>
 
-<div class="container-fluid ">
+<div class="container-fluid">
     <div class="row col-md-12 justify-content-center gen">
     <div class="col-md-3 gen">
     <h1>Connectez vous</h1>
@@ -22,7 +22,6 @@
     </div>
 </div>
 
-    
 
     
 {% endblock %}
