--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -8,8 +8,8 @@
         {{ form_start(form) }}
         {{ form_row(form.entreprise, {'label': 'Nom de l\'entreprise','attr': {'placeholder': 'Nom de l\'entreprise ...'}})}}
         {{ form_row(form.email, {'label': 'Adresse Email','attr': {'placeholder': 'Adresse email ...'}})}}
-        {{ form_row(form.password, {'label': 'Mot de passe','attr': {'placeholder': 'mot de passe'}})}}
-        {{ form_row(form.confirm_password, {'label': 'Confirmer le mot de passe','attr': {'placeholder': 'Répéter le mot de passe'}})}}
+        {{ form_row(form.mdp, {'label': 'Mot de passe','attr': {'placeholder': 'mot de passe'}})}}
+        {{ form_row(form.confirm_mdp, {'label': 'Confirmer le mot de passe','attr': {'placeholder': 'Répéter le mot de passe'}})}}
 
         <button type="submit" class="btn btn-success">Inscription</button>
         {{ form_end(form) }}
