--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -27,6 +27,7 @@
                 <th>Pv</th>
                 <th>Tva</th>
                 <th>Stock</th>
+                <th>Categorie</th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -41,6 +42,7 @@
                 <td>{{ produit.pv }}</td>
                 <td>{{ produit.tva }}</td>
                 <td>{{ produit.stock }}</td>
+                <td>{{ produit.categorie }}</td>
                 
                 <td>
                     <a href="{{ path('produit_show', {'id': produit.id}) }}">Voir</a>
