--- a/templates/produit/new.html.twig
+++ b/templates/produit/new.html.twig
@@ -18,7 +18,7 @@
 
     {{ include('produit/_form.html.twig') }}
 
-    <a href="{{ path('produit_index') }}">Revenir à la liste</a>
+    <a href="{{ path('entretien_index') }}">Revenir à la liste</a>
     </div>   
     </div>   
     </div> 
