--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -14,7 +14,7 @@
 <div class="container-fluid">
     <div class="row col-md-12 justify-content-center gen">
     <div class="col-md-10 gen cadri">
-    <h1><p class="textf">Produits d'entretien<p></h1>
+    <h1><p class="textf">{{ categorie }}<p></h1>
 
     <table class="table">
         <thead>
