--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -101,7 +101,7 @@ $('#navigation').removeClass("fixNavigation");
       </ul>
       <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand nav-pers" href="">
-    <a class="bouton_banniere" href="{{ path('login_new') }}"></a>
+    <a class="bouton_banniere" href="{{ path('user_login') }}"></a>
    </a>
      </nav>
       <nav class="navbar navbar-light bg-light">
