--- a/templates/user/create.html.twig
+++ b/templates/user/create.html.twig
@@ -1,8 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Login{% endblock %}
+{% block title %}New User{% endblock %}
 
 {% block body %}
+
 <div class="container-fluid">
     <div class="row justify-content-md-center">
        <div class="col-md-12 conn row justify-content-center"><div class="col-md-3 title"></div>
@@ -11,18 +12,14 @@
 
 <div class="container-fluid">
     <div class="row col-md-12 justify-content-center gen">
-    <div class="col-md-3 gen">
-    <h1>Connectez vous</h1>
-
-    {{ include('login/_form.html.twig') }}
-   
     
-    <a href="{{ path('user_new') }}">Demande d'inscription</a>
-   </div>
+        <div class="col-md-4 gen">
+            <h1>Veuillez-vous inscrire !</h1>
+
+            {{ include('user/_form.html.twig') }} 
+
+            <a href="{{ path('user_login') }}">Retour en arrière</a>
+        </div>
     </div>
 </div>
-
-
-    
 {% endblock %}
-
