--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -110,7 +110,7 @@ $('#navigation').removeClass("fixNavigation");
      </nav>
       <nav class="navbar navbar-light bg-light">
   <li class="nav-item">
-    <a class="nav-link bouton_banniere1" href="web_banniere.php"></a>
+    <a class="nav-link bouton_banniere1" href="{{ path('panier_index')}}"></a>
 
      </li>
      </nav>
