--- a/templates/avis/new.html.twig
+++ b/templates/avis/new.html.twig
@@ -9,14 +9,14 @@
     </div>
 </div>
 <div class="container-fluid">
-    <div class="row col-md-12 justify-content-center gen">
-    <div class="col-md-8 gen">
+    <    <div class="row col-md-12 justify-content-center gen">
+    <div class="col-md-6 gen cadri">
     <br>
-    <h1>Créer un nouveau commentaire</h1>
+    <h1><p class="textf">Créer un nouveau commentaire<p></h1>
 
     {{ include('avis/_form.html.twig') }}
 
-    <a href="{{ path('avis_index') }}">revenir à la liste</a>
+    <a href="{{ path('avis_index') }}"><p class="textf">revenir à la liste<p></a>
      </div>
     </div>
 </div>
