--- a/templates/homepage/mention.html.twig
+++ b/templates/homepage/mention.html.twig
@@ -1,9 +1,11 @@
 {% extends 'base.html.twig' %}
 {% block body %}
 <section>
+<br>
 <div class="container-fluid">
+    
     <div class="row col-md-12 justify-content-center gen">
-    <div class="col-md-8 gen">
+    <div class="col-md-8 gen cadro ">
     <p class="textf"><br>
     <h1>MENTIONS LEGALES</h1> </p>
     <p class="textf"><br>
