--- a/templates/homepage/conditions.html.twig
+++ b/templates/homepage/conditions.html.twig
@@ -2,10 +2,11 @@
 
 {% block body %}
 <section>
+<br>
 <div class="container-fluid">
+    
     <div class="row col-md-12 justify-content-center gen">
-    <div class="col-md-8 gen">
-    <p class="textf"><br>   
+    <div class="col-md-8 gen cadro ">
     <h1>CONDITIONS GENERALES DE VENTE</h1> </p>
         <br>
     <p class="textf">
