--- a/templates/user/_formulaire.html.twig
+++ b/templates/user/_formulaire.html.twig
@@ -3,7 +3,7 @@
 <div class="form-group">
     {{ form_row(form.email, {'label': 'Email', 'attr':{'placeholder' : 'Adresse email ...', 'required name':'_username', 'class':'form-control' }}) }}
     {{ form_row(form.mdp, {'label': 'Mot de passe', 'attr':{'placeholder' : 'Mot de passe ...', 'class':'form-control', 'required name':'_password', 'type':'password' }}) }}
-
+</div>
 <div class="form-group" style="display:none">
     {{ form_row(form.entreprise, {'label': 'Entreprise123', 'attr':{'placeholder' : 'Nommer votre Entreprise ...', 'class':'form-control', 'type':'hidden'}}) }}
     {{ form_row(form.responsable, {'label': 'Responsable', 'attr':{'placeholder' : 'Nommer votre Responsable ...', 'class':'form-control'}}) }}
